finish with landing page

--- a/home/src/index.html
+++ b/home/src/index.html
@@ -9,10 +9,13 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+    <!-- <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="D73D44DA-3905-44D1-AF40-7684023A33F1" crossorigin="anonymous" /> -->
 </head>
 
 <body>
     <app-root></app-root>
+
+    <!-- <script src="https://www.google.com/recaptcha/api.js"></script> -->
 </body>
 
 </html>
